# eerie

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  electron.vite.config.ts  eslint.config.ts  flake.nix  package.json  pin-definitions.json  pnpm-lock.yaml  pnpm-workspace.yaml  ralph.sh  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.claude/: ISSUES.md
.claude/done/: 001-compile-and-test.md  002-codegen-verify.md  003-replace-daemon-with-roam.md  004-electron-dev-build.md  005-file-open-save.md  006-load-component-defs.md  006-wire-ui-to-daemon-mwp.md  007-symbol-renderer.md  008-wire-routing.md  009-dc-simulation-ui.md  010-undo-redo.md  011-property-editor-typed.md  012-label-editing.md  013-ac-sweep.md  014-transient-simulation.md  015-spice-import-component-library.md  016-qemu-mcu-simulation.md  017-fpga-simulation.md  018-subcircuits.md  019-spice-netlist-export.md  020-component-creation-ui.md  021-packaging.md  022-pin-struct-refactor.md  023-pin-source-of-truth.md  024-canvas-decomposition.md  025-split-zustand-store.md  026-spice-parser-split.md  027-error-feedback-ui.md  028-worker-pool-max-limit.md
.claude/issues/: 001-compile-and-test.md  002-codegen-verify.md  003-replace-daemon-with-roam.md  004-electron-dev-build.md  005-file-open-save.md  006-load-component-defs.md  006-wire-ui-to-daemon-mwp.md  007-symbol-renderer.md  008-wire-routing.md  009-dc-simulation-ui.md  010-undo-redo.md  011-property-editor-typed.md  012-label-editing.md  013-ac-sweep.md  014-transient-simulation.md  015-spice-import-component-library.md  016-qemu-mcu-simulation.md  017-fpga-simulation.md  018-subcircuits.md  019-spice-netlist-export.md  020-component-creation-ui.md  021-packaging.md  022-pin-struct-refactor.md  023-pin-source-of-truth.md  024-canvas-decomposition.md  025-split-zustand-store.md  026-spice-parser-split.md  027-error-feedback-ui.md  028-worker-pool-max-limit.md  029-qemu-daemon-integration.md
.github/workflows/: build.yml  pages.yml  release.yml  update-deps.yml
.impeccable/briefs/: app-shell.md
claude-agent-acp/: Cargo.toml  package.json
claude-agent-acp/src/: index.ts  lib.rs  main.rs
claude-agent-sdk-deno/: Cargo.toml  package.json
claude-agent-sdk-deno/src/: lib.rs  main.rs  query_bridge.ts
components/basic/: capacitor.yaml  dc_current.yaml  dc_voltage.yaml  ground.yaml  inductor.yaml  resistor.yaml  vcc.yaml
components/fpga/: ice40hx1k.yaml
components/mcu/: README.md  atmega328p.yaml  rp2040.yaml
components/semiconductor/diodes/: 10bq015.yaml  10bq015_ir.yaml  10bq040.yaml  10bq040_ir.yaml  10bq100.yaml  10ctq150.yaml  10mq060n_ir.yaml  10mq100n.yaml  10tq045.yaml  10tq045_ir.yaml  120lq045.yaml  120lq100.yaml  12cgq150.yaml  12cgq150_ir.yaml  12ctq045.yaml  12ctq045_ir.yaml  12cwq04fn.yaml  12tq045.yaml  12tq045_ir.yaml  15cgq100.yaml  15clq100.yaml  15clq100_ir.yaml  15eth06.yaml  15ljq100.yaml  160cmq045.yaml  16ctq.yaml  16cyq150c.yaml  16syq060c.yaml  16yq045c.yaml  16yq150c.yaml  18tq045.yaml  18tq045_ir.yaml  1n1200c.yaml  1n1206a.yaml  1n1206c.yaml  1n4002.yaml  1n4106.yaml  1n4448hwt.yaml  1n5259b.yaml  1n5711.yaml  (+2311 more)
components/semiconductor/opamps/: 100310.yaml  100311.yaml  100315.yaml  100325.yaml  10100.yaml  10101.yaml  10102.yaml  10103.yaml  10104.yaml  10105.yaml  10106.yaml  10107.yaml  10109.yaml  10110.yaml  10111.yaml  10113.yaml  10114.yaml  10115.yaml  10116.yaml  10117.yaml  10118.yaml  10119.yaml  10121.yaml  10123.yaml  10124.yaml  10125.yaml  10136.yaml  10137.yaml  10160.yaml  10188.yaml  10189.yaml  10197.yaml  (+6627 more)
components/sources/: dc_current.yaml  dc_voltage.yaml
components/subcircuit/: 014lthm_fc.yaml  014thm_fc.yaml  0603_74479262147_0_47u.yaml  0603_74479262210_1u.yaml  0603_74479762122_0_22u.yaml  0603_74479762133_0_33u.yaml  0603_74479762168_0_68u.yaml  0603_74479763147_0_47u.yaml  0603_74479763147a_0_47u.yaml  0603_74479763168_0_68u.yaml  0603_74479763210_1u.yaml  0603_74479763210a_1u.yaml  0603_74479763215_1_5u.yaml  0603_74479763222_2_2u.yaml  0603hs10n.yaml  0603hs12n.yaml  0603hs15n.yaml  0603hs18n.yaml  0603hs1n8.yaml  0603hs22n.yaml  0603hs27n.yaml  0603hs33n.yaml  0603hs39n.yaml  0603hs3n9.yaml  0603hs47n.yaml  0603hs56n.yaml  0603hs68n.yaml  0603hs6n8.yaml  0603hs72n.yaml  0603hs82n.yaml  0603hsr10.yaml  0603hsr11.yaml  0603hsr12.yaml  0805030.yaml  0805060.yaml  0805080.yaml  0805101.yaml  0805120.yaml  0805121.yaml  0805150.yaml  (+25326 more)
components/symbols/: ground.yaml  vcc.yaml
data/: io.github.cramt.Eerie.desktop  io.github.cramt.Eerie.metainfo.xml
deno-bundle/: Cargo.toml
deno-bundle/src/: lib.rs  main.rs
deno-run/: Cargo.toml
deno-run/src/: lib.rs
e2e/: inspect.ts
eerie-codegen/: Cargo.toml
eerie-codegen/src/: main.rs
eerie-core/: Cargo.toml
eerie-core/src/: circuit.rs  component.rs  lib.rs  net.rs  wasm_api.rs
eerie-core/src/io/: component_def.rs  mod.rs  yaml.rs
eerie-core/src/simulation/: mna.rs  mod.rs
eerie-daemon/: Cargo.toml
eerie-daemon/src/: ai.rs  ai_provider.rs  error.rs  main.rs  mcp.rs  pool.rs  rpc.rs  service.rs  worker.rs  worker_main.rs
eerie-daemon/tests/: e2e.rs
eerie-rpc/: Cargo.toml
eerie-rpc/src/: lib.rs
eerie-spice-import/: Cargo.toml
eerie-spice-import/src/: codegen.rs  main.rs  parser.rs  symbol.rs
eerie-wasm/: Cargo.toml
eerie-wasm/src/: lib.rs
examples/: rc_transient.eerie  voltage_divider.eerie
examples/getting-started/: eerie.yaml  rc_transient.yaml  voltage_divider.yaml
flatpak/: generate-sources.sh  io.github.cramt.Eerie.yml
ngspice/: Cargo.toml
ngspice-sys/: Cargo.toml  build.rs  wrapper.h
ngspice-sys/ngspice-src/: .gitignore
ngspice-sys/src/: lib.rs
ngspice/src/: code_model.rs  lib.rs
ngspice/tests/: integration.rs
prompts/: circuit-editor.md
spice-netlist/: Cargo.toml
spice-netlist/src/: lib.rs  parse.rs
spice-netlist/tests/: netlist.rs
src/agent/: index.ts
src/codegen/: generated-rpc.ts  types.ts
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
ts-hello/: Cargo.toml  package.json
ts-hello/src/: hello.ts  main.rs
(+11457 files in other folders)
