[workspace]
members = [
    "eerie-codegen",
    "eerie-wasm",
    "eerie-rpc",
    "eerie-daemon",
    "deno-bundle",
    "deno-run",
    "ts-hello",
    "claude-agent-acp",
]
resolver = "2"

[workspace.dependencies]
log         = "0.4"
facet       = "0.44.1"
facet-json  = "0.44.1"
roam           = "7.3.0"
roam-codegen   = "7.3.0"
roam-inprocess = "7.3.0"
