[workspace]
members = [
    "eerie-codegen",
    "eerie-wasm",
    "eerie-rpc",
    "eerie-daemon",
    "deno-bundle",
    "deno-run",
    "ts-hello",
    "claude-agent-sdk-deno",
]
resolver = "2"

[workspace.dependencies]
log         = "0.4"
facet       = "0.46.0"
facet-json  = "0.46.1"
vox           = "0.4.0"
vox-codegen   = "0.4.0"
vox-inprocess = "0.4.0"
