[package]
name = "eerie-codegen"
version = "0.1.0"
edition = "2024"
description = "Dev tool: generates TypeScript RPC client from Rust service definition"

[[bin]]
name = "eerie-codegen"
path = "src/main.rs"

[dependencies]
eerie-rpc         = { path = "../eerie-rpc" }
roam-codegen      = { workspace = true }
