[package]
name = "eerie-core"
version = "0.1.0"
edition = "2024"
description = "Core circuit data structures and simulation engine"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
facet.workspace     = true
facet-json.workspace = true
facet-yaml.workspace = true
uuid.workspace      = true
thiserror.workspace = true
nalgebra.workspace  = true
log.workspace       = true

# WASM-only
wasm-bindgen             = { version = "0.2", optional = true }
js-sys                   = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
approx = "0.5"
