[package]
name = "eerie-daemon"
version = "0.1.0"
edition = "2024"
description = "Native daemon: axum HTTP + roam WS + thevenin simulation"

[[bin]]
name = "eerie-daemon"
path = "src/main.rs"

[dependencies]
eerie-rpc      = { path = "../eerie-rpc" }
thevenin       = { git = "https://github.com/cramt/thevenin", branch = "ralph/simulation-engine" }
thevenin-types = { git = "https://github.com/cramt/thevenin", branch = "ralph/simulation-engine" }
roam           = { workspace = true }
# roam-websocket not needed — we bridge axum's WebSocket directly
tokio          = { version = "1", features = ["full"] }
axum           = { version = "0.8", features = ["ws"] }
env_logger     = "0.11"
log            = { workspace = true }
tower-http     = { version = "0.6", features = ["fs", "set-header"] }
rust-embed = "8"
mime_guess = "2"
yaml-rust2 = "0.9"
facet.workspace      = true
facet-json.workspace = true
serde_json           = "1"
thiserror            = "2"
