[package]
name = "eerie-spice-import"
version = "0.1.0"
edition = "2024"
description = "Import SPICE .lib/.sub/.mod files and generate component YAML definitions"

[[bin]]
name = "eerie-spice-import"
path = "src/main.rs"

[dependencies]
# SPICE parsing
nom = "7"
# CLI
clap = { version = "4", features = ["derive"] }
# YAML output — serde + serde_yaml only in this tool (not eerie-core)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Misc
anyhow = "1"
log = "0.4"
env_logger = "0.11"
